--- a/DataStructureAdvance_Assignment.ipynb
+++ b/DataStructureAdvance_Assignment.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "def is_palindrome(string):\n",
     "  \"\"\"Checks if a string is a palindrome.\"\"\"\n",
-    "  cleaned_string = string.lower().replace(\" \", \"\")  # Remove spaces and convert to lowercase\n",
+    "  cleaned_string = string.lower().replace(\" \", \"\")\n",
     "  return cleaned_string == cleaned_string[::-1]\n",
     "\n",
     "string = \"A man a plan a canal Panama\"\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "def find_substring_occurrences(string, substring):\n",
+    "def find_occur(string, substring):\n",
     "  \"\"\"Finds all occurrences of a substring within a string.\"\"\"\n",
     "  start_index = 0\n",
     "  occurrences = []\n",
@@ -162,7 +162,7 @@
     "\n",
     "string = \"hello world hello\"\n",
     "substring = \"hello\"\n",
-    "occurrences = find_substring_occurrences(string, substring)\n",
+    "occurrences = find_occur(string, substring)\n",
     "print(occurrences) \n"
    ]
   },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
     }
    ],
    "source": [
-    "def compress_string(string):\n",
+    "def comp(string):\n",
     "  \"\"\"Performs basic string compression.\"\"\"\n",
     "  compressed_string = \"\"\n",
     "  count = 1\n",
@@ -202,7 +202,7 @@
     "\n",
     "\n",
     "string = \"aabccccaaa\"\n",
-    "compressed_string = compress_string(string)\n",
+    "compressed_string = comp(string)\n",
     "print(compressed_string)\n"
    ]
   },
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "def has_unique_characters(string):\n",
+    "def unique_char(string):\n",
     "  \"\"\"Determines if a string has all unique characters.\"\"\"\n",
     "  char_set = set()\n",
     "  for char in string:\n",
@@ -237,7 +237,7 @@
     "  return True\n",
     "\n",
     "string = \"hello\"\n",
-    "has_unique_characters_result = has_unique_characters(string)\n",
+    "has_unique_characters_result = unique_char(string)\n",
     "print(has_unique_characters_result)  \n"
    ]
   },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
     }
    ],
    "source": [
-    "def find_second_largest(numbers):\n",
+    "def second_largest(numbers):\n",
     "  \"\"\"Finds the second largest number in a list.\"\"\"\n",
     "  if len(numbers) < 2:\n",
     "    return None\n",
@@ -409,7 +409,7 @@
     "  return second_largest\n",
     "\n",
     "numbers = [3, 7, 2, 9, 5]\n",
-    "second_largest_number = find_second_largest(numbers)\n",
+    "second_largest_number = second_largest(numbers)\n",
     "print(second_largest_number)  \n"
    ]
   },
